exports[`prefer-await > invalid(1): promise.then(callback); 1`] = `

  1 | promise.then(callback);

`;

exports[`prefer-await > invalid(1): promise.then(callback); 2`] = `

Message:
> 1 | promise.then(callback);
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(10): promise.then(value => \`first\nsecond \${value}\`); 1`] = `

  1 | promise.then(value => \`first
  2 | second \${value}\`);

`;

exports[`prefer-await > invalid(10): promise.then(value => \`first\nsecond \${value}\`); 2`] = `

Message:
> 1 | promise.then(value => \`first
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.
  2 | second \${value}\`);

`;

exports[`prefer-await > invalid(11): promise.then(value => <div>\n  text {value}\n</div>); 1`] = `

  1 | promise.then(value => <div>
  2 |   text {value}
  3 | </div>);

`;

exports[`prefer-await > invalid(11): promise.then(value => <div>\n  text {value}\n</div>); 2`] = `

Message:
> 1 | promise.then(value => <div>
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.
  2 |   text {value}
  3 | </div>);

`;

exports[`prefer-await > invalid(12): promise.then(value => \"first\\\nsecond\"); 1`] = `

  1 | promise.then(value => "first\\
  2 | second");

`;

exports[`prefer-await > invalid(12): promise.then(value => \"first\\\nsecond\"); 2`] = `

Message:
> 1 | promise.then(value => "first\\
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.
  2 | second");

`;

exports[`prefer-await > invalid(13): promise.then(value => transform(\n  /* Keep\n     this indentation. */\n  value,\n)); 1`] = `

  1 | promise.then(value => transform(
  2 |   /* Keep
  3 |      this indentation. */
  4 |   value,
  5 | ));

`;

exports[`prefer-await > invalid(13): promise.then(value => transform(\n  /* Keep\n     this indentation. */\n  value,\n)); 2`] = `

Message:
> 1 | promise.then(value => transform(
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.
  2 |   /* Keep
  3 |      this indentation. */
  4 |   value,
  5 | ));

`;

exports[`prefer-await > invalid(14): promise.then(value => { transform(value); }); 1`] = `

  1 | promise.then(value => { transform(value); });

`;

exports[`prefer-await > invalid(14): promise.then(value => { transform(value); }); 2`] = `

Message:
> 1 | promise.then(value => { transform(value); });
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

Suggestion 1/1: Rewrite as an async IIFE.:
  1 | void (async () => {
  2 | 	const value = await promise;
  3 | 	transform(value);
  4 | })();

`;

exports[`prefer-await > invalid(15): if (condition) {\n\tpromise.then(value => {\n\t\t// Keep this comment.\n\t\ttransform(value);\n\t});\n} 1`] = `

  1 | if (condition) {
  2 | 	promise.then(value => {
  3 | 		// Keep this comment.
  4 | 		transform(value);
  5 | 	});
  6 | }

`;

exports[`prefer-await > invalid(15): if (condition) {\n\tpromise.then(value => {\n\t\t// Keep this comment.\n\t\ttransform(value);\n\t});\n} 2`] = `

Message:
  1 | if (condition) {
> 2 | 	promise.then(value => {
    | 	        ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.
  3 | 		// Keep this comment.
  4 | 		transform(value);
  5 | 	});
  6 | }

Suggestion 1/1: Rewrite as an async IIFE.:
  1 | if (condition) {
  2 | 	void (async () => {
  3 | 		const value = await promise;
  4 | 		// Keep this comment.
  5 | 		transform(value);
  6 | 	})();
  7 | }

`;

exports[`prefer-await > invalid(16): if (condition) {\n  promise.then(value => {\n    // Keep this space-indented comment.\n    transform(value);\n  });\n} 1`] = `

  1 | if (condition) {
  2 |   promise.then(value => {
  3 |     // Keep this space-indented comment.
  4 |     transform(value);
  5 |   });
  6 | }

`;

exports[`prefer-await > invalid(16): if (condition) {\n  promise.then(value => {\n    // Keep this space-indented comment.\n    transform(value);\n  });\n} 2`] = `

Message:
  1 | if (condition) {
> 2 |   promise.then(value => {
    |           ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.
  3 |     // Keep this space-indented comment.
  4 |     transform(value);
  5 |   });
  6 | }

Suggestion 1/1: Rewrite as an async IIFE.:
  1 | if (condition) {
  2 |   void (async () => {
  3 |     const value = await promise;
  4 |     // Keep this space-indented comment.
  5 |     transform(value);
  6 |   })();
  7 | }

`;

exports[`prefer-await > invalid(17): if (condition) {\n  promise.then(value => transform(value));\n} 1`] = `

  1 | if (condition) {
  2 |   promise.then(value => transform(value));
  3 | }

`;

exports[`prefer-await > invalid(17): if (condition) {\n  promise.then(value => transform(value));\n} 2`] = `

Message:
  1 | if (condition) {
> 2 |   promise.then(value => transform(value));
    |           ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.
  3 | }

Suggestion 1/1: Rewrite as an async IIFE.:
  1 | if (condition) {
  2 |   void (async () => {
  3 |     const value = await promise;
  4 |     return transform(value);
  5 |   })();
  6 | }

`;

exports[`prefer-await > invalid(18): promise.then(value => {\n\tvalue = transform(value);\n\treturn value;\n}); 1`] = `

  1 | promise.then(value => {
  2 | 	value = transform(value);
  3 | 	return value;
  4 | });

`;

exports[`prefer-await > invalid(18): promise.then(value => {\n\tvalue = transform(value);\n\treturn value;\n}); 2`] = `

Message:
> 1 | promise.then(value => {
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.
  2 | 	value = transform(value);
  3 | 	return value;
  4 | });

Suggestion 1/1: Rewrite as an async IIFE.:
  1 | void (async () => {
  2 | 	let value = await promise;
  3 | 	value = transform(value);
  4 | 	return value;
  5 | })();

`;

exports[`prefer-await > invalid(19): (condition ? promise : otherPromise).then(value => transform(value)); 1`] = `

  1 | (condition ? promise : otherPromise).then(value => transform(value));

`;

exports[`prefer-await > invalid(19): (condition ? promise : otherPromise).then(value => transform(value)); 2`] = `

Message:
> 1 | (condition ? promise : otherPromise).then(value => transform(value));
    |                                      ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

Suggestion 1/1: Rewrite as an async IIFE.:
  1 | void (async () => {
  2 | 	const value = await (condition ? promise : otherPromise);
  3 | 	return transform(value);
  4 | })();

`;

exports[`prefer-await > invalid(2): promise.then(() => {}); 1`] = `

  1 | promise.then(() => {});

`;

exports[`prefer-await > invalid(2): promise.then(() => {}); 2`] = `

Message:
> 1 | promise.then(() => {});
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

Suggestion 1/1: Rewrite as an async IIFE.:
  1 | void (async () => {
  2 | 	await promise;
  3 | })();

`;

exports[`prefer-await > invalid(20): promise.catch(callback); 1`] = `

  1 | promise.catch(callback);

`;

exports[`prefer-await > invalid(20): promise.catch(callback); 2`] = `

Message:
> 1 | promise.catch(callback);
    |         ^^^^^ Prefer \`await\` over promise chaining with \`.catch()\`.

`;

exports[`prefer-await > invalid(21): promise.finally(callback); 1`] = `

  1 | promise.finally(callback);

`;

exports[`prefer-await > invalid(21): promise.finally(callback); 2`] = `

Message:
> 1 | promise.finally(callback);
    |         ^^^^^^^ Prefer \`await\` over promise chaining with \`.finally()\`.

`;

exports[`prefer-await > invalid(22): promise[\"then\"](callback); 1`] = `

  1 | promise["then"](callback);

`;

exports[`prefer-await > invalid(22): promise[\"then\"](callback); 2`] = `

Message:
> 1 | promise["then"](callback);
    |         ^^^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(23): promise[\`then\`](callback); 1`] = `

  1 | promise[\`then\`](callback);

`;

exports[`prefer-await > invalid(23): promise[\`then\`](callback); 2`] = `

Message:
> 1 | promise[\`then\`](callback);
    |         ^^^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(24): const method = \"catch\"; promise[method](callback); 1`] = `

  1 | const method = "catch"; promise[method](callback);

`;

exports[`prefer-await > invalid(24): const method = \"catch\"; promise[method](callback); 2`] = `

Message:
> 1 | const method = "catch"; promise[method](callback);
    |                                 ^^^^^^ Prefer \`await\` over promise chaining with \`.catch()\`.

`;

exports[`prefer-await > invalid(25): promise?.then(callback); 1`] = `

  1 | promise?.then(callback);

`;

exports[`prefer-await > invalid(25): promise?.then(callback); 2`] = `

Message:
> 1 | promise?.then(callback);
    |          ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(26): promise.then?.(callback); 1`] = `

  1 | promise.then?.(callback);

`;

exports[`prefer-await > invalid(26): promise.then?.(callback); 2`] = `

Message:
> 1 | promise.then?.(callback);
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(27): await promise.then(callback); 1`] = `

  1 | await promise.then(callback);

`;

exports[`prefer-await > invalid(27): await promise.then(callback); 2`] = `

Message:
> 1 | await promise.then(callback);
    |               ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(28): await promise.catch(callback); 1`] = `

  1 | await promise.catch(callback);

`;

exports[`prefer-await > invalid(28): await promise.catch(callback); 2`] = `

Message:
> 1 | await promise.catch(callback);
    |               ^^^^^ Prefer \`await\` over promise chaining with \`.catch()\`.

`;

exports[`prefer-await > invalid(29): await promise.finally(callback); 1`] = `

  1 | await promise.finally(callback);

`;

exports[`prefer-await > invalid(29): await promise.finally(callback); 2`] = `

Message:
> 1 | await promise.finally(callback);
    |               ^^^^^^^ Prefer \`await\` over promise chaining with \`.finally()\`.

`;

exports[`prefer-await > invalid(3): promise.then(() => doSomething()); 1`] = `

  1 | promise.then(() => doSomething());

`;

exports[`prefer-await > invalid(3): promise.then(() => doSomething()); 2`] = `

Message:
> 1 | promise.then(() => doSomething());
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

Suggestion 1/1: Rewrite as an async IIFE.:
  1 | void (async () => {
  2 | 	await promise;
  3 | 	return doSomething();
  4 | })();

`;

exports[`prefer-await > invalid(30): Promise.resolve(value).then(callback); 1`] = `

  1 | Promise.resolve(value).then(callback);

`;

exports[`prefer-await > invalid(30): Promise.resolve(value).then(callback); 2`] = `

Message:
> 1 | Promise.resolve(value).then(callback);
    |                        ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(31): Promise.reject(error).catch(callback); 1`] = `

  1 | Promise.reject(error).catch(callback);

`;

exports[`prefer-await > invalid(31): Promise.reject(error).catch(callback); 2`] = `

Message:
> 1 | Promise.reject(error).catch(callback);
    |                       ^^^^^ Prefer \`await\` over promise chaining with \`.catch()\`.

`;

exports[`prefer-await > invalid(32): new Promise(resolve => resolve()).finally(callback); 1`] = `

  1 | new Promise(resolve => resolve()).finally(callback);

`;

exports[`prefer-await > invalid(32): new Promise(resolve => resolve()).finally(callback); 2`] = `

Message:
> 1 | new Promise(resolve => resolve()).finally(callback);
    |                                   ^^^^^^^ Prefer \`await\` over promise chaining with \`.finally()\`.

`;

exports[`prefer-await > invalid(33): promise.then(onFulfilled, onRejected); 1`] = `

  1 | promise.then(onFulfilled, onRejected);

`;

exports[`prefer-await > invalid(33): promise.then(onFulfilled, onRejected); 2`] = `

Message:
> 1 | promise.then(onFulfilled, onRejected);
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(34): promise.then(onFulfilled).then(value => transform(value)); 1`] = `

  1 | promise.then(onFulfilled).then(value => transform(value));

`;

exports[`prefer-await > invalid(34): promise.then(onFulfilled).then(value => transform(value)); 2`] = `

Message:
> 1 | promise.then(onFulfilled).then(value => transform(value));
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(34): promise.then(onFulfilled).then(value => transform(value)); 3`] = `

Message:
> 1 | promise.then(onFulfilled).then(value => transform(value));
    |                           ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(35): promise.then(onFulfilled).catch(onRejected).finally(onFinally); 1`] = `

  1 | promise.then(onFulfilled).catch(onRejected).finally(onFinally);

`;

exports[`prefer-await > invalid(35): promise.then(onFulfilled).catch(onRejected).finally(onFinally); 2`] = `

Message:
> 1 | promise.then(onFulfilled).catch(onRejected).finally(onFinally);
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(35): promise.then(onFulfilled).catch(onRejected).finally(onFinally); 3`] = `

Message:
> 1 | promise.then(onFulfilled).catch(onRejected).finally(onFinally);
    |                           ^^^^^ Prefer \`await\` over promise chaining with \`.catch()\`.

`;

exports[`prefer-await > invalid(35): promise.then(onFulfilled).catch(onRejected).finally(onFinally); 4`] = `

Message:
> 1 | promise.then(onFulfilled).catch(onRejected).finally(onFinally);
    |                                             ^^^^^^^ Prefer \`await\` over promise chaining with \`.finally()\`.

`;

exports[`prefer-await > invalid(36): value.then(value => transform(value)); 1`] = `

  1 | value.then(value => transform(value));

`;

exports[`prefer-await > invalid(36): value.then(value => transform(value)); 2`] = `

Message:
> 1 | value.then(value => transform(value));
    |       ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(37): if (condition) promise.then(value => transform(value)); 1`] = `

  1 | if (condition) promise.then(value => transform(value));

`;

exports[`prefer-await > invalid(37): if (condition) promise.then(value => transform(value)); 2`] = `

Message:
> 1 | if (condition) promise.then(value => transform(value));
    |                        ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(38): const result = promise.then(value => transform(value)); 1`] = `

  1 | const result = promise.then(value => transform(value));

`;

exports[`prefer-await > invalid(38): const result = promise.then(value => transform(value)); 2`] = `

Message:
> 1 | const result = promise.then(value => transform(value));
    |                        ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(39): promise.then(function (value) { return transform(value); }); 1`] = `

  1 | promise.then(function (value) { return transform(value); });

`;

exports[`prefer-await > invalid(39): promise.then(function (value) { return transform(value); }); 2`] = `

Message:
> 1 | promise.then(function (value) { return transform(value); });
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(4): promise.then(value => transform(value)); 1`] = `

  1 | promise.then(value => transform(value));

`;

exports[`prefer-await > invalid(4): promise.then(value => transform(value)); 2`] = `

Message:
> 1 | promise.then(value => transform(value));
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

Suggestion 1/1: Rewrite as an async IIFE.:
  1 | void (async () => {
  2 | 	const value = await promise;
  3 | 	return transform(value);
  4 | })();

`;

exports[`prefer-await > invalid(40): promise.then(({value}) => transform(value)); 1`] = `

  1 | promise.then(({value}) => transform(value));

`;

exports[`prefer-await > invalid(40): promise.then(({value}) => transform(value)); 2`] = `

Message:
> 1 | promise.then(({value}) => transform(value));
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(41): promise.then((value = fallback) => transform(value)); 1`] = `

  1 | promise.then((value = fallback) => transform(value));

`;

exports[`prefer-await > invalid(41): promise.then((value = fallback) => transform(value)); 2`] = `

Message:
> 1 | promise.then((value = fallback) => transform(value));
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(42): promise.then((...values) => transform(values)); 1`] = `

  1 | promise.then((...values) => transform(values));

`;

exports[`prefer-await > invalid(42): promise.then((...values) => transform(values)); 2`] = `

Message:
> 1 | promise.then((...values) => transform(values));
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(43): promise.then((value, index) => transform(value, index)); 1`] = `

  1 | promise.then((value, index) => transform(value, index));

`;

exports[`prefer-await > invalid(43): promise.then((value, index) => transform(value, index)); 2`] = `

Message:
> 1 | promise.then((value, index) => transform(value, index));
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(44): promise.then(value => { var value; return value; }); 1`] = `

  1 | promise.then(value => { var value; return value; });

`;

exports[`prefer-await > invalid(44): promise.then(value => { var value; return value; }); 2`] = `

Message:
> 1 | promise.then(value => { var value; return value; });
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(45): promise.then(value => { function value() {} return value; }); 1`] = `

  1 | promise.then(value => { function value() {} return value; });

`;

exports[`prefer-await > invalid(45): promise.then(value => { function value() {} return value; }); 2`] = `

Message:
> 1 | promise.then(value => { function value() {} return value; });
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(46): getPromise(value).then(value => transform(value)); 1`] = `

  1 | getPromise(value).then(value => transform(value));

`;

exports[`prefer-await > invalid(46): getPromise(value).then(value => transform(value)); 2`] = `

Message:
> 1 | getPromise(value).then(value => transform(value));
    |                   ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(47): promise.then(() => { const promise = otherPromise; return promise; }); 1`] = `

  1 | promise.then(() => { const promise = otherPromise; return promise; });

`;

exports[`prefer-await > invalid(47): promise.then(() => { const promise = otherPromise; return promise; }); 2`] = `

Message:
> 1 | promise.then(() => { const promise = otherPromise; return promise; });
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(48): promise.then(() => { var promise; return promise; }); 1`] = `

  1 | promise.then(() => { var promise; return promise; });

`;

exports[`prefer-await > invalid(48): promise.then(() => { var promise; return promise; }); 2`] = `

Message:
> 1 | promise.then(() => { var promise; return promise; });
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(49): promise.then(() => { function promise() {} return promise; }); 1`] = `

  1 | promise.then(() => { function promise() {} return promise; });

`;

exports[`prefer-await > invalid(49): promise.then(() => { function promise() {} return promise; }); 2`] = `

Message:
> 1 | promise.then(() => { function promise() {} return promise; });
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(5): fetch(url).then(response => response.json()); 1`] = `

  1 | fetch(url).then(response => response.json());

`;

exports[`prefer-await > invalid(5): fetch(url).then(response => response.json()); 2`] = `

Message:
> 1 | fetch(url).then(response => response.json());
    |            ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

Suggestion 1/1: Rewrite as an async IIFE.:
  1 | void (async () => {
  2 | 	const response = await fetch(url);
  3 | 	return response.json();
  4 | })();

`;

exports[`prefer-await > invalid(50): promise.then(value => { \"use strict\"; return transform(value); }); 1`] = `

  1 | promise.then(value => { "use strict"; return transform(value); });

`;

exports[`prefer-await > invalid(50): promise.then(value => { \"use strict\"; return transform(value); }); 2`] = `

Message:
> 1 | promise.then(value => { "use strict"; return transform(value); });
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(51): promise /* keep */.then(value => transform(value)); 1`] = `

  1 | promise /* keep */.then(value => transform(value));

`;

exports[`prefer-await > invalid(51): promise /* keep */.then(value => transform(value)); 2`] = `

Message:
> 1 | promise /* keep */.then(value => transform(value));
    |                    ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(52): function * run() { yield promise.then(callback); } 1`] = `

  1 | function * run() { yield promise.then(callback); }

`;

exports[`prefer-await > invalid(52): function * run() { yield promise.then(callback); } 2`] = `

Message:
> 1 | function * run() { yield promise.then(callback); }
    |                                  ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(53): class Runner { constructor() { promise.then(callback); } } 1`] = `

  1 | class Runner { constructor() { promise.then(callback); } }

`;

exports[`prefer-await > invalid(53): class Runner { constructor() { promise.then(callback); } } 2`] = `

Message:
> 1 | class Runner { constructor() { promise.then(callback); } }
    |                                        ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(54): cy.get(\"button\").then(callback); 1`] = `

  1 | cy.get("button").then(callback);

`;

exports[`prefer-await > invalid(54): cy.get(\"button\").then(callback); 2`] = `

Message:
> 1 | cy.get("button").then(callback);
    |                  ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(55): async function run() {\n\treturn fetch(url)\n\t\t.then(response => response.json())\n\t\t.catch(error => {\n\t\t\tconsole.error(error);\n\t\t});\n} 1`] = `

  1 | async function run() {
  2 | 	return fetch(url)
  3 | 		.then(response => response.json())
  4 | 		.catch(error => {
  5 | 			console.error(error);
  6 | 		});
  7 | }

`;

exports[`prefer-await > invalid(55): async function run() {\n\treturn fetch(url)\n\t\t.then(response => response.json())\n\t\t.catch(error => {\n\t\t\tconsole.error(error);\n\t\t});\n} 2`] = `

Message:
  1 | async function run() {
  2 | 	return fetch(url)
> 3 | 		.then(response => response.json())
    | 		 ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.
  4 | 		.catch(error => {
  5 | 			console.error(error);
  6 | 		});
  7 | }

`;

exports[`prefer-await > invalid(55): async function run() {\n\treturn fetch(url)\n\t\t.then(response => response.json())\n\t\t.catch(error => {\n\t\t\tconsole.error(error);\n\t\t});\n} 3`] = `

Message:
  1 | async function run() {
  2 | 	return fetch(url)
  3 | 		.then(response => response.json())
> 4 | 		.catch(error => {
    | 		 ^^^^^ Prefer \`await\` over promise chaining with \`.catch()\`.
  5 | 			console.error(error);
  6 | 		});
  7 | }

`;

exports[`prefer-await > invalid(56): async function run() {\n\tgetPromise(await dependency).then(value => transform(value));\n} 1`] = `

  1 | async function run() {
  2 | 	getPromise(await dependency).then(value => transform(value));
  3 | }

`;

exports[`prefer-await > invalid(56): async function run() {\n\tgetPromise(await dependency).then(value => transform(value));\n} 2`] = `

Message:
  1 | async function run() {
> 2 | 	getPromise(await dependency).then(value => transform(value));
    | 	                             ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.
  3 | }

`;

exports[`prefer-await > invalid(57): function * run() {\n\tgetPromise(yield dependency).then(value => transform(value));\n} 1`] = `

  1 | function * run() {
  2 | 	getPromise(yield dependency).then(value => transform(value));
  3 | }

`;

exports[`prefer-await > invalid(57): function * run() {\n\tgetPromise(yield dependency).then(value => transform(value));\n} 2`] = `

Message:
  1 | function * run() {
> 2 | 	getPromise(yield dependency).then(value => transform(value));
    | 	                             ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.
  3 | }

`;

exports[`prefer-await > invalid(58): function foo(value: any) { value.catch(() => {}); } 1`] = `

  1 | function foo(value: any) { value.catch(() => {}); }

`;

exports[`prefer-await > invalid(58): function foo(value: any) { value.catch(() => {}); } 2`] = `

Message:
> 1 | function foo(value: any) { value.catch(() => {}); }
    |                                  ^^^^^ Prefer \`await\` over promise chaining with \`.catch()\`.

`;

exports[`prefer-await > invalid(59): promise.then(<Type>(value: Type) => value); 1`] = `

  1 | promise.then(<Type>(value: Type) => value);

`;

exports[`prefer-await > invalid(59): promise.then(<Type>(value: Type) => value); 2`] = `

Message:
> 1 | promise.then(<Type>(value: Type) => value);
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(6): promise.then(async value => await transform(value)); 1`] = `

  1 | promise.then(async value => await transform(value));

`;

exports[`prefer-await > invalid(6): promise.then(async value => await transform(value)); 2`] = `

Message:
> 1 | promise.then(async value => await transform(value));
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

Suggestion 1/1: Rewrite as an async IIFE.:
  1 | void (async () => {
  2 | 	const value = await promise;
  3 | 	return await transform(value);
  4 | })();

`;

exports[`prefer-await > invalid(60): promise.then((value): string => value); 1`] = `

  1 | promise.then((value): string => value);

`;

exports[`prefer-await > invalid(60): promise.then((value): string => value); 2`] = `

Message:
> 1 | promise.then((value): string => value);
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(61): promise.then(await => await); 1`] = `

  1 | promise.then(await => await);

`;

exports[`prefer-await > invalid(61): promise.then(await => await); 2`] = `

Message:
> 1 | promise.then(await => await);
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(62): promise.then(await => await); 1`] = `

  1 | promise.then(await => await);

`;

exports[`prefer-await > invalid(62): promise.then(await => await); 2`] = `

Message:
> 1 | promise.then(await => await);
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(63): promise.then(() => await); 1`] = `

  1 | promise.then(() => await);

`;

exports[`prefer-await > invalid(63): promise.then(() => await); 2`] = `

Message:
> 1 | promise.then(() => await);
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(64): promise.then(() => { var await; return await; }); 1`] = `

  1 | promise.then(() => { var await; return await; });

`;

exports[`prefer-await > invalid(64): promise.then(() => { var await; return await; }); 2`] = `

Message:
> 1 | promise.then(() => { var await; return await; });
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(65): getPromise(await).then(value => transform(value)); 1`] = `

  1 | getPromise(await).then(value => transform(value));

`;

exports[`prefer-await > invalid(65): getPromise(await).then(value => transform(value)); 2`] = `

Message:
> 1 | getPromise(await).then(value => transform(value));
    |                   ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(66): promise.then(() => { await: doSomething(); }); 1`] = `

  1 | promise.then(() => { await: doSomething(); });

`;

exports[`prefer-await > invalid(66): promise.then(() => { await: doSomething(); }); 2`] = `

Message:
> 1 | promise.then(() => { await: doSomething(); });
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(67): promise.then(let => let); 1`] = `

  1 | promise.then(let => let);

`;

exports[`prefer-await > invalid(67): promise.then(let => let); 2`] = `

Message:
> 1 | promise.then(let => let);
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(68): function foo(promise: Promise<string>) { promise.then(value => value); } 1`] = `

Filename: file.ts

  1 | function foo(promise: Promise<string>) { promise.then(value => value); }

`;

exports[`prefer-await > invalid(68): function foo(promise: Promise<string>) { promise.then(value => value); } 2`] = `

Message:
> 1 | function foo(promise: Promise<string>) { promise.then(value => value); }
    |                                                  ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(69): function foo(promise: Promise<string>) {\n\tpromise.then((value: string) => value);\n} 1`] = `

Filename: file.ts

  1 | function foo(promise: Promise<string>) {
  2 | 	promise.then((value: string) => value);
  3 | }

`;

exports[`prefer-await > invalid(69): function foo(promise: Promise<string>) {\n\tpromise.then((value: string) => value);\n} 2`] = `

Message:
  1 | function foo(promise: Promise<string>) {
> 2 | 	promise.then((value: string) => value);
    | 	        ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.
  3 | }

Suggestion 1/1: Rewrite as an async IIFE.:
  1 | function foo(promise: Promise<string>) {
  2 | 	void (async () => {
  3 | 		const value: string = await promise;
  4 | 		return value;
  5 | 	})();
  6 | }

`;

exports[`prefer-await > invalid(7): promise.then(value => ({await: value})); 1`] = `

  1 | promise.then(value => ({await: value}));

`;

exports[`prefer-await > invalid(7): promise.then(value => ({await: value})); 2`] = `

Message:
> 1 | promise.then(value => ({await: value}));
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

Suggestion 1/1: Rewrite as an async IIFE.:
  1 | void (async () => {
  2 | 	const value = await promise;
  3 | 	return ({await: value});
  4 | })();

`;

exports[`prefer-await > invalid(70): function foo(promise: Promise<string>) { promise.catch(error => error); } 1`] = `

Filename: file.ts

  1 | function foo(promise: Promise<string>) { promise.catch(error => error); }

`;

exports[`prefer-await > invalid(70): function foo(promise: Promise<string>) { promise.catch(error => error); } 2`] = `

Message:
> 1 | function foo(promise: Promise<string>) { promise.catch(error => error); }
    |                                                  ^^^^^ Prefer \`await\` over promise chaining with \`.catch()\`.

`;

exports[`prefer-await > invalid(71): function foo(promise: Promise<string>) { promise.finally(() => {}); } 1`] = `

Filename: file.ts

  1 | function foo(promise: Promise<string>) { promise.finally(() => {}); }

`;

exports[`prefer-await > invalid(71): function foo(promise: Promise<string>) { promise.finally(() => {}); } 2`] = `

Message:
> 1 | function foo(promise: Promise<string>) { promise.finally(() => {}); }
    |                                                  ^^^^^^^ Prefer \`await\` over promise chaining with \`.finally()\`.

`;

exports[`prefer-await > invalid(72): function foo(promise: Promise<string> | undefined) { promise?.then(value => value); } 1`] = `

Filename: file.ts

  1 | function foo(promise: Promise<string> | undefined) { promise?.then(value => value); }

`;

exports[`prefer-await > invalid(72): function foo(promise: Promise<string> | undefined) { promise?.then(value => value); } 2`] = `

Message:
> 1 | function foo(promise: Promise<string> | undefined) { promise?.then(value => value); }
    |                                                               ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(73): function foo(promise: Promise<string> | undefined) { promise!.then(value => value); } 1`] = `

Filename: file.ts

  1 | function foo(promise: Promise<string> | undefined) { promise!.then(value => value); }

`;

exports[`prefer-await > invalid(73): function foo(promise: Promise<string> | undefined) { promise!.then(value => value); } 2`] = `

Message:
> 1 | function foo(promise: Promise<string> | undefined) { promise!.then(value => value); }
    |                                                               ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(74): function foo(promise: PromiseLike<string>) { promise.then(value => value); } 1`] = `

Filename: file.ts

  1 | function foo(promise: PromiseLike<string>) { promise.then(value => value); }

`;

exports[`prefer-await > invalid(74): function foo(promise: PromiseLike<string>) { promise.then(value => value); } 2`] = `

Message:
> 1 | function foo(promise: PromiseLike<string>) { promise.then(value => value); }
    |                                                      ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(75): function foo<T extends PromiseLike<string>>(promise: T) { promise.then(value => value); } 1`] = `

Filename: file.ts

  1 | function foo<T extends PromiseLike<string>>(promise: T) { promise.then(value => value); }

`;

exports[`prefer-await > invalid(75): function foo<T extends PromiseLike<string>>(promise: T) { promise.then(value => value); } 2`] = `

Message:
> 1 | function foo<T extends PromiseLike<string>>(promise: T) { promise.then(value => value); }
    |                                                                   ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(76): function foo(thenable: {then(handler: (value: string) => void): void}) { thenable.then(value => value); } 1`] = `

Filename: file.ts

  1 | function foo(thenable: {then(handler: (value: string) => void): void}) { thenable.then(value => value); }

`;

exports[`prefer-await > invalid(76): function foo(thenable: {then(handler: (value: string) => void): void}) { thenable.then(value => value); } 2`] = `

Message:
> 1 | function foo(thenable: {then(handler: (value: string) => void): void}) { thenable.then(value => value); }
    |                                                                                   ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(77): function foo(value: Missing) { value.then(value => value); } 1`] = `

Filename: file.ts

  1 | function foo(value: Missing) { value.then(value => value); }

`;

exports[`prefer-await > invalid(77): function foo(value: Missing) { value.then(value => value); } 2`] = `

Message:
> 1 | function foo(value: Missing) { value.then(value => value); }
    |                                      ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

`;

exports[`prefer-await > invalid(78): function foo(value: any) { value.catch(() => {}); } 1`] = `

Filename: file.ts

  1 | function foo(value: any) { value.catch(() => {}); }

`;

exports[`prefer-await > invalid(78): function foo(value: any) { value.catch(() => {}); } 2`] = `

Message:
> 1 | function foo(value: any) { value.catch(() => {}); }
    |                                  ^^^^^ Prefer \`await\` over promise chaining with \`.catch()\`.

`;

exports[`prefer-await > invalid(79): (promise).then(value => transform(value)); 1`] = `

  1 | (promise).then(value => transform(value));

`;

exports[`prefer-await > invalid(79): (promise).then(value => transform(value)); 2`] = `

Message:
> 1 | (promise).then(value => transform(value));
    |           ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

Suggestion 1/1: Rewrite as an async IIFE.:
  1 | void (async () => {
  2 | 	const value = await (promise);
  3 | 	return transform(value);
  4 | })();

`;

exports[`prefer-await > invalid(8): promise.then(value =>\n  transform(\n    value,\n  )\n); 1`] = `

  1 | promise.then(value =>
  2 |   transform(
  3 |     value,
  4 |   )
  5 | );

`;

exports[`prefer-await > invalid(8): promise.then(value =>\n  transform(\n    value,\n  )\n); 2`] = `

Message:
> 1 | promise.then(value =>
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.
  2 |   transform(
  3 |     value,
  4 |   )
  5 | );

Suggestion 1/1: Rewrite as an async IIFE.:
  1 | void (async () => {
  2 |   const value = await promise;
  3 |   return transform(
  4 |     value,
  5 |   );
  6 | })();

`;

exports[`prefer-await > invalid(80): (promise as Promise<string>).then((value: string) => value); 1`] = `

  1 | (promise as Promise<string>).then((value: string) => value);

`;

exports[`prefer-await > invalid(80): (promise as Promise<string>).then((value: string) => value); 2`] = `

Message:
> 1 | (promise as Promise<string>).then((value: string) => value);
    |                              ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

Suggestion 1/1: Rewrite as an async IIFE.:
  1 | void (async () => {
  2 | 	const value: string = await (promise as Promise<string>);
  3 | 	return value;
  4 | })();

`;

exports[`prefer-await > invalid(81): (promise || fallback).then(value => transform(value)); 1`] = `

  1 | (promise || fallback).then(value => transform(value));

`;

exports[`prefer-await > invalid(81): (promise || fallback).then(value => transform(value)); 2`] = `

Message:
> 1 | (promise || fallback).then(value => transform(value));
    |                       ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.

Suggestion 1/1: Rewrite as an async IIFE.:
  1 | void (async () => {
  2 | 	const value = await (promise || fallback);
  3 | 	return transform(value);
  4 | })();

`;

exports[`prefer-await > invalid(82): class Foo extends Bar {\n\tmethod() {\n\t\tsuper.then(value => value);\n\t}\n} 1`] = `

  1 | class Foo extends Bar {
  2 | 	method() {
  3 | 		super.then(value => value);
  4 | 	}
  5 | }

`;

exports[`prefer-await > invalid(82): class Foo extends Bar {\n\tmethod() {\n\t\tsuper.then(value => value);\n\t}\n} 2`] = `

Message:
  1 | class Foo extends Bar {
  2 | 	method() {
> 3 | 		super.then(value => value);
    | 		      ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.
  4 | 	}
  5 | }

`;

exports[`prefer-await > invalid(9): promise.then(value => (\n  transform(\n    value,\n  )\n)); 1`] = `

  1 | promise.then(value => (
  2 |   transform(
  3 |     value,
  4 |   )
  5 | ));

`;

exports[`prefer-await > invalid(9): promise.then(value => (\n  transform(\n    value,\n  )\n)); 2`] = `

Message:
> 1 | promise.then(value => (
    |         ^^^^ Prefer \`await\` over promise chaining with \`.then()\`.
  2 |   transform(
  3 |     value,
  4 |   )
  5 | ));

Suggestion 1/1: Rewrite as an async IIFE.:
  1 | void (async () => {
  2 |   const value = await promise;
  3 |   return (
  4 |     transform(
  5 |       value,
  6 |     )
  7 |   );
  8 | })();

`;
